--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,18 @@ quarkus.http.test-port=0
 
 quarkus.test.continuous-testing=disabled
 
+quarkus.flyway.migrations.schemas=${FLYWAY_SCHEMA}
+quarkus.flyway.migrations.create-schemas=true
+quarkus.flyway.migrations.migrate-at-start=true
+quarkus.datasource.jdbc=false
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=${DB_USERNAME}
 quarkus.datasource.password=${DB_PASSWORD}
 quarkus.datasource.reactive.url=${DB_REACTIVE_URL}
+quarkus.datasource.migrations.db-kind=mysql
+quarkus.datasource.migrations.reactive=false
+quarkus.datasource.migrations.username=${FLYWAY_USERNAME}
+quarkus.datasource.migrations.password=${FLYWAY_PASSWORD}
+quarkus.datasource.migrations.jdbc.url=${FLYWAY_JDBC_URL}
+
+quarkus.http.limits.max-body-size=209715200
