--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 GRADLE_USER_HOME=/opt/application/cache
 XDEBUG_REMOTE_PORT=6011
 
+REDIS_HOST=redis
+REDIS_PORT=6379
+
 DB_PASSWORD=dev
 DB_USERNAME=root
 DB_REACTIVE_URL=mysql://mysql80:3306/payments_adm
